; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_prepare_rpc_query.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_prepare_rpc_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prepare_rpc_query(%struct.connection* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.connection*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.connection*, %struct.connection** %4, align 8
  %8 = call %struct.TYPE_2__* @RPCS_DATA(%struct.connection* %7)
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %9, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @prepare_rpc_query_raw(i32 %10, i32* %12, i32 %13)
  ret void
}

declare dso_local i32 @prepare_rpc_query_raw(i32, i32*, i32) #1

declare dso_local %struct.TYPE_2__* @RPCS_DATA(%struct.connection*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
